--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -15,9 +15,9 @@
   .dropdown-toggle, 
   .td-theme-toggle {
     &, svg, i, &::after {
-      color: #ffffff !important;
-      fill: #ffffff !important;
-      opacity: 1 !important;
+      color: #ffffff;
+      fill: #ffffff;
+      opacity: 1;
     }
   }
 }
